tests/parse-fail/bad_fn_type1.fl
pub mod bad_fn_type1 {
    pub struct BadFnType1 {
        pub f : fn(a, ) -> unit;
    }
}
